assets/scss/stg-design/atoms/_more-link.scss
.more-link {
  color: $light-gray;
  font-family: $ff-sans;
  font-size: $fz-more-link;
  font-weight: 700;
  text-transform: uppercase;

  &:after {
    content: "\f30b";
    display: inline-block;
    font-family: $font-awesome;
    font-size: 16px;
    margin-left: 5px;
    transition: transform .6s ease;
    vertical-align: middle;

    // Fix for aligning the arrow with uncentered font
    position: relative;
    top: -2px;
  }

  &:hover {
    text-decoration: none;
    color: $med-shasta;

    &:after {
      transform: translateX(4px);
    }
  }

  &.blue {
    color: $med-shasta;
  }

  &.color-arrow {
    &:after {
      color: $med-shasta;
    }
  }

  &.white {
    color: $white;
  }

  &.ttn {
    text-transform: none;
  }
}

